--- a/language/HI.json
+++ b/language/HI.json
@@ -211,6 +211,7 @@
         },
         "tagall": {
             "TAGALL_DESC": "ग्रुप में सभी को टैग करें।",
+            "HIDETAG_DESC": "ग्रुप में सभी को टैग करें।(Member Mode)",
             "ADMİN": "*मैं इस समूह में व्यवस्थापक नहीं हूं!*",
             "SCAN": "जांचता है कि क्या दर्ज संख्या व्हाट्सएप पर पंजीकृत है.",
             "NO": "*कृपया कोई भी फ़ोन नंबर दर्ज करें!*\n*नमूना:* ```.scan 991xxxx```",
