--- a/language/ML.json
+++ b/language/ML.json
@@ -211,6 +211,7 @@
         },
         "tagall": {
             "TAGALL_DESC": "ഗ്രൂപ്പിൽ എല്ലാവരെയും ടാഗ് ചെയ്യുക.",
+            "HIDETAG_DESC": "ഗ്രൂപ്പിൽ എല്ലാവരെയും ടാഗ് ചെയ്യുക.(Member Mode)",
             "ADMİN": "*ഞാൻ ഈ ഗ്രൂപ്പിലെ ഒരു അഡ്‌മിൻ അല്ല!*",
             "SCAN": "നൽകിയ നമ്പർ വാട്ട്ആപ്പിൽ രജിസ്റ്റർ ചെയ്തിട്ടുണ്ടോയെന്ന് പരിശോധിക്കുന്നു.",
             "NO": "*ഏതെങ്കിലും ഫോൺ നമ്പർ നൽകുക!*\n*സാമ്പിൾ:* ```.scan 991xxxx```",
