--- a/language/RU.json
+++ b/language/RU.json
@@ -210,6 +210,7 @@
     },
     "tagall": {
       "TAGALL_DESC": "Теги всех в группе. Чтобы бросить хэштег, ответить на сообщение или ввести слово.",
+      "HIDETAG_DESC": "Теги всех в группе. Чтобы бросить хэштег, ответить на сообщение или ввести слово.(Member Mode)",
       "ADMİN": "*Я не администратор в этой группе!*",
       "SCAN": "Проверяет, зарегистрирован ли введенный номер в WhatApp.",
       "NO": "*Пожалуйста, Введите Любой Номер Телефона!*\n*Пример:* ```.scan 9xxxx```",
